--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-linear-gradient": "^2.8.3",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
