--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.1.2",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
